# Dipla

./: CMakeLists.txt  Dockerfile  docker-compose.yml  pod.txt
SQL/: CreateTables.sql  CreateTriggers.sql  FillTables.sql
src/: Auth.cpp  Auth.h  CMakeLists.txt  Disk.cpp  Disk.h  Help.cpp  JwtWork.cpp  PostgreInterface.cpp  PostgreInterface.h  RunningTest.cpp  RunningTest.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
